# MCQ-Solver

./: .gitignore  README.md  basic_widgets.py  exam_widgets.py  export_files.py  help_window.py  image.py  main.py  main_frames.py  pyproject.toml  requirements.txt  settings.py  solution.py  start_menu.py  tabview_settings.py  tabview_utils.py  user_information.py
src/: app.py  settings.py
src/anki/: config.py  connect_anki.py  response_status.py
src/components/: basic_widgets.py  image.py  main_frames.py  solution.py  start_menu.py  user_information.py
src/components/tabview/: export_files.py  tabview_settings.py  tabview_utils.py
src/utils/: image_processing.py
src/windows/: help_window.py  user_information.py
